# vhdl_image_filter

./: pyproject.toml
scripts/: take_screenshot.py
src/: filter_image.py
src/filters/: __init__.py
src/filters/python/: __init__.py  environment.py  filter.py  filtered_image.py  fpga_connection.py  utils.py
src/filters/vhdl/: Makefile  divider.vhd  filter.vhd  filter_test_bench.vhd  funciones.vhd  mod_m_counter.vhd  tictoc.vhd  top_level.vhdl
src/filters/vhdl/cores/fifo32to8/: fifo32to8.gise  fifo32to8.ngc  fifo32to8.sym  fifo32to8.v  fifo32to8.veo  fifo32to8.xco  fifo32to8.xise  fifo32to8_flist.txt  fifo32to8_xmdf.tcl  gen_fifo32to8.tcl
src/filters/vhdl/cores/fifo32to8/_xmsgs/: cg.xmsgs  pn_parser.xmsgs
src/filters/vhdl/cores/fifo32to8/tmp/_xmsgs/: pn_parser.xmsgs  xst.xmsgs
src/filters/vhdl/cores/fifo8to32/: fifo8to32.gise  fifo8to32.ngc  fifo8to32.sym  fifo8to32.v  fifo8to32.veo  fifo8to32.xco  fifo8to32.xise  fifo8to32_flist.txt  fifo8to32_xmdf.tcl  gen_fifo8to32.tcl
src/filters/vhdl/cores/fifo8to32/_xmsgs/: cg.xmsgs  pn_parser.xmsgs
src/filters/vhdl/cores/fifo8to32/tmp/_xmsgs/: pn_parser.xmsgs  xst.xmsgs
