[tool.poetry]
name = "image-filter"
version = "0.1.0"
description = ""
authors = ["Federico Rosende"]
readme = "README.md"
packages = [{include = "image_filter"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.74"
numpy = "^1.25.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
